# ChangeLog for app-misc/cl-kde-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.5.1.ebuild:
  Removed kgtk

  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.5.1.ebuild:
  Added net-wireless/bluedevil

*cl-kde-meta-4.5.1 (15 Sep 2010)

  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.5.1.ebuild:
  Added new version

  21 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-kde-meta-4.4.4.ebuild:
  Added kget

*cl-kde-meta-4.4.4 (08 Jun 2010)

  08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.4.4.ebuild, -cl-kde-meta-10.5.83.ebuild:
  Changed version.

  07 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru> Manifest:
  Version bump
