@@ -1,4 +1,4 @@
 EBUILD cds-meta-10.4-r1.ebuild 3739 RMD160 d0a8e34926e6c2d85b055a16ac9570564f79b92a SHA1 0b1f6df4aba91586d5ce168543d62ffaff4ef23e SHA256 6f683f1105d901a2d5c281c7d2d1c85e5f93180a0bf5173ea974fcebe15b861f
-EBUILD cds-meta-10.999.ebuild 3573 RMD160 b7ce9c275fa4141b19e3164aec8d3a4d9084f3f9 SHA1 79e4d8752db9227666cc282737f53ec4c4119b7b SHA256 85d253cd27618b7178405a130b88d261cf4d61b1eac0eb6f207ccf45cc0e4c9f
+EBUILD cds-meta-10.999-r1.ebuild 2172 RMD160 e244ac05ef5902bc1f8bded4f5dbb52eea4cb24b SHA1 3137284b168f76bcc4ec8335ad1864eb69ddb304 SHA256 d70a94ead1d452d09d46f7998b05c43f525854577ab706af63c0524aec8e5da9
 MISC ChangeLog 1307 RMD160 2f4bc085812c6544f58b6e35735c4b2d4e5e3416 SHA1 6def3cceffc34ff9aa4509de85f7b41065742aeb SHA256 c2da50d12a7dd692815eccb9c70342926f76db8852ee59e41490457be1940936
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
