@@ -12,16 +12,10 @@ SRC_URI=""
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="calculate_nodecoration calculate_nokernel calculate_nonettools calculate_nowireless
-calculate_nodhcp
-calculate_noftp
-calculate_nojabber
-calculate_nomail
-calculate_nomysql
-calculate_nonamed
-calculate_nopgsql
-calculate_noproxy
-calculate_nosamba
+IUSE="calculate_nodecoration calculate_nokernel calculate_nonettools
+calculate_nonetwork calculate_nowireless
+calculate_nodhcp calculate_noftp calculate_nojabber calculate_nomail
+calculate_nomysql calculate_nonamed calculate_nopgsql calculate_noproxy
 "
 
 RDEPEND="
@@ -30,10 +24,12 @@ RDEPEND="
 
 RDEPEND="${RDEPEND}
 	app-misc/cl-base-meta
+	app-misc/cl-tools-meta
 
 	!calculate_nodecoration? ( app-misc/cl-decoration-meta )
 	!calculate_nokernel? ( sys-kernel/calculate-sources )
 	!calculate_nonettools? ( app-misc/cl-nettools-meta )
+	!calculate_nonetwork? ( app-misc/cl-network-meta )
 	!calculate_nowireless? ( app-misc/cl-wireless-meta )
 
 	!calculate_nodhcp? ( net-misc/dhcp )
@@ -58,28 +54,6 @@ RDEPEND="${RDEPEND}
 		net-proxy/havp
 		net-proxy/squid
 	)
-	!calculate_nosamba? ( net-fs/samba )
-
-"
-
-# Archive
-RDEPEND="${RDEPEND} 
-	app-arch/arj
-	app-arch/dump
-	app-arch/p7zip
-	app-arch/rar
-	app-arch/unace
-	app-arch/unarj
-	app-arch/unzip
-	app-arch/zip
-"
-
-# Base
-RDEPEND="${RDEPEND}
-	app-admin/logrotate
-	app-admin/syslog-ng
-	sys-apps/hotplug
-	sys-process/vixie-cron
 "
 
 # LDAP
@@ -87,69 +61,6 @@ RDEPEND="${RDEPEND}
 	net-nds/openldap
 "
 
-# Tools
-RDEPEND="${RDEPEND}
-	app-admin/hddtemp
-	app-admin/testdisk
-	app-antivirus/clamav
-	app-cdr/cdrkit
-	app-cdr/dvd+rw-tools
-	app-editors/vim
-	app-i18n/enca
-	app-misc/mc
-	app-misc/screen
-	app-portage/emerge-delta-webrsync
-	app-portage/genlop
-	app-portage/gentoolkit
-	app-portage/portage-utils
-	app-portage/ufed
-	app-text/wgetpaste
-	app-vim/colorschemes
-	app-vim/vimcommander
-	dev-libs/klibc
-	dev-python/psycopg
-	dev-python/pyserial
-	dev-ruby/libxml
-	net-firewall/iptables
-	net-fs/nfs-utils
-	net-irc/cgiirc
-	net-irc/weechat
-	net-misc/bridge-utils
-	net-misc/ifenslave
-	net-misc/netkit-telnetd
-	net-misc/whois
-	net-misc/wol
-	net-p2p/bittorrent
-	net-p2p/btpd
-	sci-libs/fftw
-	sys-apps/acl
-	sys-apps/calculate-server
-	sys-apps/ethtool
-	sys-apps/iproute2
-	sys-apps/kexec-tools
-	sys-apps/memtest86+
-	sys-apps/pciutils
-	sys-apps/pv
-	sys-apps/smartmontools
-	sys-apps/usbutils
-	sys-auth/nss_ldap
-	sys-auth/pam_ldap
-	sys-block/parted
-	sys-block/tw_cli
-	sys-fs/dmraid
-	sys-fs/dosfstools
-	sys-fs/e2fsprogs
-	sys-fs/jfsutils
-	sys-fs/mdadm
-	sys-fs/mtools
-	sys-fs/ntfs3g
-	sys-fs/xfsdump
-	sys-fs/xfsprogs
-	sys-kernel/module-rebuild
-	sys-process/htop
-	sys-process/lsof
-	www-client/links
-"
 cxxflags_present_in() {
 	grep CXXFLAGS $1 &>/dev/null
 	return $?
