@@ -1,2 +1,2 @@
-EBUILD cl-decoration-meta-11.0.ebuild 911 RMD160 3a23ce3fa8c5d78321ed1a28f0b3e4cd8d35fd1b SHA1 3cb7dddbc7d34c5e5e550390137423bf29195784 SHA256 881e96aa66d70f7e6a8995169a5bd1f39f6432afbec52ca2a23cea4aa41b2ed0
+EBUILD cl-decoration-meta-11.0-r1.ebuild 957 RMD160 4c3f8d880bd203ff168f330b1cdbad1a5b513ab3 SHA1 75f574d4812e3fd4dad9211ab6565984499dcd42 SHA256 11407b5dc65ca8c8b90528f0c86aa74fe791fd640b7e214ec0ae3f773f2997ec
 MISC ChangeLog 309 RMD160 ce2927120ac02525149017e45ff2721e75f1605b SHA1 4361d7c622edcb54b930ab50d3fe43c0e34946e1 SHA256 9dc01b67c1248407b208cb7e6fbba9278ae694defc39a7b71b62d0ac2cb1f8a9
