@@ -1,3 +1,3 @@
-EBUILD cl-kde-meta-4.4.4.ebuild 3442 RMD160 5f89e6b3a88fd3a59951312ee49f1cbb089402f9 SHA1 2bc8443c9601331908e911b2e464f09d9a64d418 SHA256 1078771ad8409f5a364f70c070e61777baaec9dd36170a8f4f7948d12b180cfc
-EBUILD cl-kde-meta-4.5.1.ebuild 3572 RMD160 f013ff61821b444826480fe8364596015b97d286 SHA1 90843ad2af942d175dcfa43037bf823e2dc7fa16 SHA256 fe47d0a9afe3c9d4102c17d8746b1891c604008c96333f37ac7bcf17bc76528a
-MISC ChangeLog 879 RMD160 1ddf0828360741c84e50669ff63f1d03a150717d SHA1 c73a0a70e8e0b82072cf60d6518b3577669197b9 SHA256 ec40915ec5a5c06352040f5cafc52919873571432b62b44a93683e2515f9faae
+EBUILD cl-kde-meta-4.4.4-r1.ebuild 3754 RMD160 8b9245fcf0c1f67d88d9799f912a5f553f192a99 SHA1 6080812bfd295059cb6e4b2cd806e1e9890f68d7 SHA256 90f66ceb566cebba86a4f45fdeda2d009048daaf3f0f263515b5c4b0e98d0525
+EBUILD cl-kde-meta-4.5.1.ebuild 3885 RMD160 64781ab5275d0c09fcf446074c2ea8018106c328 SHA1 f9cd4e5eb50d717cd4b2b49053c2d548221195d2 SHA256 1f33652075e197b5cf54b90b299d182db2b29e4aaae07cb47fce7a9a223ed97b
+MISC ChangeLog 1084 RMD160 0f325d4c29fb6a4c520ec8e1b631b0042eb7599f SHA1 43bdcd70bf6e222a73a2f589a9b46673a9c01610 SHA256 426e44e63b69abe4542fcf5cdb7c0ba9fb013a6e168a71eacf180b3299a6aaf3
