@@ -1,2 +1,2 @@
-EBUILD cl-nettools-meta-11.0.ebuild 1080 RMD160 6c494f20786f27cbd95abd3d5f7cd4270d9eaccb SHA1 1b597d0c878740d2edadd133ff51f8fdd67b12fc SHA256 8a633b8eacf6b4d57e775410139ce6fb0ef4ac48b7f4d7c532041cc170d91d5d
-MISC ChangeLog 303 RMD160 f94e29f8d5fdae7863d7d9c17a18a3aa34ee1300 SHA1 021fcebae54a4650eb28eed19a2559e6907edf02 SHA256 605145feb685a26d13c7b20c5feb7bcfa05a6c10a48970c7ad7d667e5a4ae485
+EBUILD cl-nettools-meta-11.0-r1.ebuild 1072 RMD160 5219d8bc774da11d8176f7103f6f5794bc96a789 SHA1 ce89cd2c5f80af7f7a615f5462268f15a642e6e0 SHA256 0af7ae214f38e5d8d1a102b6df6aeafb03279d09297b78acfc9c3eb31e0590cb
+MISC ChangeLog 492 RMD160 86f7f36f3ef3e6291977d728990d8690cd9303d1 SHA1 5eaffa4b606a0a0fe8b1839938285ceadc276403 SHA256 54ba9d759c747db5f433c8f57fc73cdcbeceb17ae673da656a3dd9b781fe0e7e
