@@ -11,32 +11,17 @@ SRC_URI=""
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="amd64 x86"
-IUSE="distro_CDS distro_CLD distro_CLDG distro_CLDX"
+IUSE="distro_desktop distro_CLD distro_CLDG distro_CLDX distro_CDS"
 
 RDEPEND="
+	net-dialup/pptpclient
+	net-dialup/rp-pppoe
 	net-dns/bind-tools
 	net-misc/ntp
 
-	distro_CDS? (
-		net-analyzer/fail2ban
-		net-analyzer/ipcad
-		net-analyzer/iptraf
-		net-analyzer/macchanger
-		net-analyzer/nmap
-		net-analyzer/sarg
-		net-analyzer/tcpdump
-		net-analyzer/traceroute
-		net-analyzer/vnstat
-		net-dialup/freeradius
-		net-dialup/minicom
-		net-dialup/ppp
-		net-dialup/pptpclient
-		net-dialup/pptpd
-		net-dialup/rp-pppoe
-		net-dialup/xl2tpd
-		net-dns/ddclient
+	distro_desktop? (
+		net-fs/nfs-utils
 	)
-
 	distro_CLD? (
 		net-misc/kvpnc
 		net-misc/wicd
@@ -52,6 +37,21 @@ RDEPEND="
 	)
 	distro_CLDX? (
 		net-misc/wicd
+	)
+	distro_CDS? (
+		net-dialup/freeradius
+		net-dialup/ppp
+		net-dialup/pptpclient
+		net-dialup/pptpd
+		net-dialup/rp-pppoe
+		net-dialup/xl2tpd
+		net-dns/ddclient
+		net-firewall/iptables
+		net-fs/nfs-utils
+		net-fs/samba
+		net-misc/bridge-utils
+		net-misc/ifenslave
+		net-misc/wol
 	)
 "
 
