@@ -1,2 +1,2 @@
-EBUILD cl-network-meta-11.0.ebuild 1119 RMD160 944ef2c955e9b8536e763b603e20ce7a462da012 SHA1 f7bb0c410fca9029d3d085d5e81b0493622d733c SHA256 67875caccdf2c353f240119983ffecd98786a70072d46d8bd8b21a3dd3a13f5b
-MISC ChangeLog 300 RMD160 9094389b8d31795acfb3e02d606b6c7f2232affc SHA1 db4d502455092ba346e0d2300cc2dd8faf17c1cf SHA256 8bcc6c0c0d3e00e8b7ba4d19ca7b72c851839b694ee45cc379f5a48690bd1db1
+EBUILD cl-network-meta-11.0-r1.ebuild 1477 RMD160 32abffa5d4de79bf8706ce4841c27498d6023a92 SHA1 bc20fd2325bfca9e37a93e60d82796bc7ee1ecce SHA256 68b7029cf795213fc5c3040f084803430580ab4390bdae0186a0abf4626143bd
+MISC ChangeLog 486 RMD160 8d385efcbcf98b5e6d0c14a62893d627877a1f6d SHA1 e5148f37467df2d4dcf28b87d71544b7ac1df190 SHA256 8ff48e6d58a93f8c1019471b940d26552ba0fb3cc24a905eb3b5c59811f5ceba
