@@ -1,2 +1,2 @@
-EBUILD cl-tools-meta-11.0.ebuild 1953 RMD160 78c35c9e9fa992ce3f01383f813e44a279025b4c SHA1 35cd7c8b77d7a1bf2b04e170ef3a5408155d5d57 SHA256 b4a926e623c5d25e3e5b45ca843b4c5242f01c8169015b1df7312cbebcb8adb2
+EBUILD cl-tools-meta-11.0-r1.ebuild 3010 RMD160 ba2499e8ef5a142eda3432b8e7e6c43692be52fb SHA1 02e7ed7a83c3b42b138bc26a36ecdd1f9a7eb641 SHA256 620fe945a502005aca8062c9f321e74953f4040a2ada46f494fc866bde52d388
 MISC ChangeLog 294 RMD160 5374dcfbd01a50aa9e3e0f5c0bda9773b7bd868d SHA1 b24d1c857dea63bf7ecfa7213152866efc3c3c20 SHA256 036b1d642b351277318ac747636eff3a03fc3ba9ebff107962b6730f4ab9b01a
