@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-network-meta-11.0-r1 (22 Nov 2010)
+
+  22 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-network-meta-11.0.ebuild, +cl-network-meta-11.0-r1.ebuild:
+  daily update
+
 *cl-network-meta-11.0 (17 Nov 2010)
 
   17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
