@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-kde-meta-4.4.4-r1 (22 Nov 2010)
+
+  22 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-kde-meta-4.4.4.ebuild, +cl-kde-meta-4.4.4-r1.ebuild,
+  cl-kde-meta-4.5.1.ebuild:
+  daily update
+
   15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cl-kde-meta-4.5.1.ebuild:
   Removed kgtk
